- humbug - gitignore - hgignore

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
 	"description": "Conpago migrations module.",
 	"type": "library",
 	"license": "MIT",
+	"minimum-stability": "dev",
+	"prefer-stable": true,
 	"authors": [
 		{
 			"name": "Bartosz Gołek",
@@ -19,7 +21,8 @@
 		"phpmd/phpmd": "*",
 		"squizlabs/php_codesniffer": "*",
 		"sebastian/phpcpd": "*",
-		"phpunit/phpunit": "4.*"
+		"phpunit/phpunit": "5.*",
+		"humbug/humbug" : "*"
 	},
 	"autoload": {
 		"psr-0": {
