PHP 7.1 + CS + Phing

--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,19 @@
 		}
 	],
 	"require": {
+		"php": ">=7.1",
 		"conpago/conpago-migrations-contract": "dev-master",
 		"conpago/conpago-console-contract": "dev-master"
 	},
 	"require-dev": {
-		"pdepend/pdepend": "*",
-		"phpmd/phpmd": "*",
-		"squizlabs/php_codesniffer": "*",
-		"sebastian/phpcpd": "*",
-		"phpunit/phpunit": "5.*",
-		"humbug/humbug" : "*"
+		"pdepend/pdepend": "2.5.*",
+		"phpmd/phpmd": "2.6.*",
+		"squizlabs/php_codesniffer": "3.0.*",
+		"sebastian/phpcpd": "3.0.*",
+		"phpdocumentor/phpdocumentor": "2.9.*",
+		"phploc/phploc": "3.0.*",
+		"phpunit/phpunit": "6.2.*",
+		"phing/phing": "2.9.*"
 	},
 	"autoload": {
 		"psr-0": {
